
-------------------------------------------------------------------



-------------------------------------------------------------------
4.17.0:

-Revised default config

-Resource page revisions

-Misc UX revisions

-------------------------------------------------------------------



-------------------------------------------------------------------
4.18.0:

-Support for new REQUIRED cookie standard 'SameSite', explicitly set to strict for privacy

-Upgraded Bittrex / Binance / Gateio / HitBTC / OkCoin APIs to latest versions

-Refactored / cleaned javascript

-Revised resources page

-More news feeds

-Misc UX revisions

-------------------------------------------------------------------



-------------------------------------------------------------------
4.19.0:

-Updated default config

-Semantic revisions

-------------------------------------------------------------------



-------------------------------------------------------------------
4.19.1:

-Bug fix for market charts spot price tooltip, on mouse / touch hover

-Bug fix for 'watch only' toggle on Update page

-------------------------------------------------------------------



-------------------------------------------------------------------
4.19.2:

-Bug fix for log viewing UI

-Removed / replaced stale markets

-------------------------------------------------------------------



-------------------------------------------------------------------
4.20.0:

-Initial support for DeFi markets (uniswap, uniswap-v2, balancer, bancor, curve), via the defipulse.com API

-------------------------------------------------------------------



-------------------------------------------------------------------
4.20.1:

-API fixes and optimizations (Optimized default results limits / Multiple-connection local auto-throttling / error fallback for Defipulse.com API connections)

-Misc UX

-------------------------------------------------------------------


























